# MDMidi

./: .gitignore  CMakeLists.txt
.old/MDMidiDrv/DriverCfg/: CommDlg.bas  DriverNotes.txt  MDMidDrvCfg.frm  MDMidDrvCfg_Install.frm  Readme.txt  RegModule.bas
.old/MDMidiDrv/MDMidiDrv_src/: .MDMidiDrv.exp  MDMidiDrv.cpp  MDMidiDrv.def  MDMidiDrv.sln  MDMidiDrv.vcxproj  MDMidiDrv.vcxproj.filters  dsound.cpp  sound_out_dsound.cpp  sound_out_xaudio2.cpp
.old/MDMidiDrv/SoundEngine/: Structs.h
.old/MDMidiDrv/SoundEngine/chips/: fm2612.c  mamedef.h  sn76496.c
.old/MDMidiPlay/: 2612_reader.c  MainEngine.c  Player.c  Stream.c
.old/MDMidiPlay/chips/: 2612intf.h  fm2612.c  sn764intf.c  sn764intf.h
MDMidiDrv/include/: MDMidDrv.h
MDMidiDrv/lib/SoundEngine/: Loader.h  Sound.h  Structs.h  stdtype.h
MDMidiDrv/lib/SoundEngine/chips/: 2612intf.c  2612intf.h  fm.h  fm2612.c  mamedef.h  sn76496.c  sn764intf.c  sn764intf.h
MDMidiDrv/src/: 2612_reader.c  2612_reader.h  2612_structs.h  Loader.c  MDMidiDrv.cpp  MainEngine.c  Sound.c  Sound.h  ds_stream.h  dsound.cpp  sound_out.h  sound_out_dsound.cpp  sound_out_winmm.cpp  sound_out_xaudio2.cpp
MDMidiPlay/src/: 2612_checksum.c  2612_reader.h  2612_structs.h  Loader.c  Midi1to0.c  Player.c  Sound.c  Stream.c  Stream.h  Structs.h
MDMidiPlay/src/chips/: 2612intf.c  fm2612.c  sn76496.c
